# Embedded-Linux

./: README.md
AdminLinux_Task1/: script
AdminLinux_Task2/: binary_search.c
AdminLinux_Task3/: README.md  task3_script
EmbeddedLinux_Task1/: README.md  dynamicMain.elf  main.c  staticMain.elf
EmbeddedLinux_Task1/headers/: div.h  mod.h  mul.h
EmbeddedLinux_Task1/src/: div.c  mul.c  sub.c
EmbeddedLinux_Task3/: README.md
EmbeddedLinux_Task4/: README.md  app.elf
EmbeddedLinux_Task4/App/: main.c
EmbeddedLinux_Task4/Inc/: AVR_reg.h  bit_math.h  dio.h  port.h  portCfg.h  std_types.h
EmbeddedLinux_Task4/Src/: dio.c  port.c  portCfg.c
EmbeddedLinux_Task5/: CMakeLists.txt  README.md
EmbeddedLinux_Task5/Src/: CMakeLists.txt  mod.c
EmbeddedLinux_Task6/: README.md
EmbeddedLinux_Task7/: README.md
Exam1/: backup_script.sh
Exam1/backups/: backup_dir1_2023_12_05  backup_dir2_2023_12_05
